objects/vlocity_cmt__BusinessSiteOffering__c.object
<CustomObject>
    <description>Site offerings enable you to describe the different types of services available at a given site. In the communications industry, these are typically types of services offered at a retail store such as bill payment and equipment returns, but could also represent products generally available at that store. In the public sector, these represent the benefits and services provided at the service provider&apos;s site such as counseling services, shelter or food distribution.</description>
    <fields>
        <fullName>vlocity_cmt__BusinessSiteId__c</fullName>
        <label>Business Site</label>
        <referenceTo>vlocity_cmt__BusinessSite__c</referenceTo>
        <relationshipName>SiteServicesProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>SiteServicesProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductName__c</fullName>
        <formula>vlocity_cmt__ProductId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <label>Site Offering</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Offerings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>